--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,5 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#3D346A",
+  "theme_color": "#3D346A"
 }
